--- a/package.json
+++ b/package.json
@@ -1,38 +1,30 @@
 {
-  "name": "es-template",
-  "version": "1.0.0",
-  "vercode": 1,
-  "imServerUrl": "https://api.cedock.net",
-  "usePush": true,
-  "useIm": true,
+  "name": "hippy-vue-next-demo",
+  "version": "2.0.0",
+  "description": "A Demo Example For Hippy-Vue-Next Library To Show.",
   "private": true,
-  "nativeMain": "./src/main-native.js",
+  "nativeMain": "./src/main-native.ts",
+  "repository": "https://github.com/Tencent/Hippy/tree/master/examples/hippy-vue-next-demo",
+  "license": "Apache-2.0",
+  "author": "OpenHippy Team",
   "scripts": {
-    "lint": "vue-cli-service lint",
-    "debug": "extscreen-debug",
-    "dev": "webpack --config ./scripts/dev.js",
-    "vendor": "webpack  --config ./scripts/android-vendor.js",
-    "esbuild": "webpack --config ./scripts/hippy-webpack.android.js"
+    "hippy:dev": "node ./scripts/env-polyfill.js hippy-dev -c ./scripts/hippy-webpack.dev.js",
+    "hippy:vendor": "node ./scripts/env-polyfill.js webpack --config ./scripts/hippy-webpack.ios-vendor.js --config ./scripts/hippy-webpack.android-vendor.js",
+    "hippy:build": "node ./scripts/env-polyfill.js webpack --config ./scripts/hippy-webpack.ios.js --config ./scripts/hippy-webpack.android.js",
+    "web:dev": "npm run hippy:dev & node ./scripts/env-polyfill.js webpack serve --config ./scripts/hippy-webpack.web-renderer.dev.js",
+    "web:build": "node ./scripts/env-polyfill.js webpack --config ./scripts/hippy-webpack.web-renderer.js"
   },
   "dependencies": {
-    "@huantv/vue": "1.1.6",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-image": "^2.1.1",
-    "@vue/compiler-sfc": "^3.2.37",
-    "autoprefixer": "^10.4.7",
-    "core-js": "^3.4.3",
-    "moment": "^2.29.1",
-    "postcss": "^8.4.14",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "vue": "^2.6.10",
-    "@extscreen/es-router": "3.0.0",
-    "@extscreen/es-component": "3.0.1",
+    "@extscreen/es-component": "^3.0.6",
     "@extscreen/es-log": "3.0.0",
-    "@extscreen/es-core": "3.0.1",
-    "@extscreen/es-runtime": "2.1.7",
-    "@extscreen/es-debug-server": "^1.0.8"
+    "@extscreen/es-router": "^3.0.0",
+    "@hippy/vue-next": "latest",
+    "@hippy/vue-router-next-history": "latest",
+    "@hippy/web-renderer": "latest",
+    "@vue/runtime-core": "^3.3.4",
+    "typescript": "^5.1.3",
+    "vue": "^3.2.21",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
@@ -45,35 +37,30 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/polyfill": "^7.12.0",
     "@babel/preset-env": "^7.12.0",
+    "@babel/runtime": "^7.16.0",
+    "@hippy/debug-server-next": "latest",
     "@hippy/hippy-dynamic-import-plugin": "^2.0.0",
+    "@hippy/hippy-hmr-plugin": "^0.1.0",
+    "@hippy/rejection-tracking-polyfill": "^1.0.0",
     "@hippy/vue-css-loader": "^2.0.1",
-    "@huantv/debug-server": "^0.0.7",
-    "@huantv/vue-css-loader": "^1.1.0",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "babel-eslint": "^10.0.3",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/cli-service": "^4.5.19",
+    "@vue/compiler-sfc": "^3.2.21",
     "babel-loader": "^8.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env-os": "^7.1.1",
+    "esbuild": "^0.13.14",
+    "esbuild-loader": "^2.18.0",
+    "file-loader": "^4.3.0",
+    "less": "^4.1.2",
     "less-loader": "^7.1.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-node-polyfills": "^0.2.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-vue": "^6.0.0",
-    "rollup-plugin-vue2": "^0.8.1",
-    "scope-loader": "^1.0.3",
-    "shelljs": "^0.8.3",
-    "unicode-loader": "^1.0.7",
+    "shelljs": "^0.8.5",
+    "terser": "^4.8.0",
+    "ts-loader": "^8.4.0",
     "url-loader": "^4.0.0",
-    "vue-loader": "^15.9.6",
-    "vue-template-compiler": "^2.6.10",
+    "vue-loader": "^17.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-cli": "^4.7.2"
   }
 }
