--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
+
   "devDependencies": {
     "@babel/core": "^7.12.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -58,6 +59,7 @@
     "url-loader": "^4.0.0",
     "vue-loader": "^17.0.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "path-to-regexp": "^1.8.0"
   }
 }
