--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
   },
   "dependencies": {
     "@hippy/vue-next": "latest",
-    "@hippy/vue-router-next-history": "latest",
     "@hippy/web-renderer": "latest",
     "@vue/runtime-core": "^3.3.4",
     "typescript": "^5.1.3",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue-tsc": "^1.6.5",
+    "@vue/tsconfig": "^0.4.0"
   },
-
   "devDependencies": {
     "@babel/core": "^7.12.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
