--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typescript": "^5.1.3",
     "vue": "^3.2.21",
     "vue-tsc": "^1.6.5",
-    "@vue/tsconfig": "^0.4.0"
+    "@vue/tsconfig": "^0.4.0",
+    "@vue/devtools-api": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
