集成:hippy-vue-next

--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "web:build": "node ./scripts/env-polyfill.js webpack --config ./scripts/hippy-webpack.web-renderer.js"
   },
   "dependencies": {
-    "@hippy/vue-next": "latest",
     "@hippy/web-renderer": "latest",
     "@vue/runtime-core": "^3.3.4",
     "typescript": "^5.1.3",
     "vue": "^3.2.21",
     "vue-tsc": "^1.6.5",
     "@vue/tsconfig": "^0.4.0",
-    "@vue/devtools-api": "^6.5.0"
+    "@vue/devtools-api": "^6.5.0",
+    "@vue/shared": "^3.2.21"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
