--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
   },
   "dependencies": {
     "@hippy/web-renderer": "latest",
-    "@hippy/hippy-vue-next-style-parser": "^2.16.4",
-    "@vue/runtime-core": "^3.3.4",
     "typescript": "^5.1.3",
     "vue": "^3.2.21",
     "vue-tsc": "^1.6.5",
     "@vue/tsconfig": "^0.4.0",
     "@vue/devtools-api": "^6.5.0",
-    "@vue/shared": "^3.2.21"
+    "@vue/shared": "^3.2.21",
+    "@vue/runtime-core": "^3.2.21"
   },
   "devDependencies": {
     "@babel/core": "^7.12.0",
